move workshop description and non-notebook materials to normal website

--- a/notebooks/2_image_quantization.ipynb
+++ b/notebooks/2_image_quantization.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Color Quantization using K-Means\n",
-    "In this notebook, we want to transform a regular RGB image (where each pixel is represented as a Red-Green-Blue triplet) into a [compressed representation](https://en.wikipedia.org/wiki/Color_quantization), where each pixel is represented as a single number (color index) together with a limited color palette (RGB triplets corresponding to the color indices). \n",
+    "In this notebook, we want to transform a regular [RGB image](https://en.wikipedia.org/wiki/RGB_color_model#Numeric_representations) (where each pixel is represented as a Red-Green-Blue triplet) into a [compressed representation](https://en.wikipedia.org/wiki/Color_quantization), where each pixel is represented as a single number (color index) together with a limited color palette (RGB triplets corresponding to the color indices). \n",
     "\n",
     "Example from Wikipedia (original image and after quantization):\n",
     "<img src=\"https://upload.wikimedia.org/wikipedia/commons/e/e3/Dithering_example_undithered.png\" alt=\"\" /> <img src=\"https://upload.wikimedia.org/wikipedia/en/4/48/Dithering_example_undithered_16color_palette.png\" alt=\"\" />"
