minor changes to notebooks

--- a/notebooks/1_visualize_text.ipynb
+++ b/notebooks/1_visualize_text.ipynb
@@ -225,6 +225,10 @@
    "source": [
     "# lambdas = eigenvalues\n",
     "print(kpca.lambdas_[:10])\n",
+    "# check how much \"information\" we would keep if we were to reduce the dimensionality to 20\n",
+    "# (this is not 100% accurate, since we only computed the first 100 kPCA components, i.e.,\n",
+    "# normally lambda_ should contain all eigenvalues - but this should be close enough)\n",
+    "print(\"Percentage of variance retained with 20 components:\", 100*(sum(kpca.lambdas_[:20])/sum(kpca.lambdas_)))\n",
     "# plot eigenvalue spectrum\n",
     "plt.figure()\n",
     "plt.plot(range(1, len(kpca.lambdas_)+1), kpca.lambdas_)\n",
