--- a/notebooks/5_mnist_torch.ipynb
+++ b/notebooks/5_mnist_torch.ipynb
@@ -182,7 +182,7 @@
    "outputs": [],
    "source": [
     "# apply network to input, i.e., call forward() to generate the prediction\n",
-    "y = ffnn(x)\n",
+    "y = ffnn(x)  # same as: y = ffnn.forward(x)\n",
     "print(y.shape)  # batch size x classes"
    ]
   },
@@ -667,7 +667,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -681,7 +681,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
