--- a/notebooks/2_image_quantization.ipynb
+++ b/notebooks/2_image_quantization.ipynb
@@ -147,7 +147,7 @@
     "\n",
     "The objective that k-means internally optimizes is the average distance of the samples to their assigned cluster centers, i.e., it tries to find clusters such that all the points in the cluster are very close to the respective cluster center.\n",
     "\n",
-    "After fitting k-means, the final value of this objective function can be computed with the `score` function on the dataset (this actually gives you the negative value, since this is more convenient for the some optimization algorithms).\n",
+    "After fitting k-means, the final value of this objective function can be computed with the `score` function on the dataset (this actually gives you the negative value, since this is more convenient for some optimization algorithms).\n",
     "\n",
     "We can now simply fit k-means with different settings for *k* and observe how the value of the score function changes as we increase the number of clusters.\n",
     "\n",
