--- a/test_installation.ipynb
+++ b/test_installation.ipynb
@@ -16,19 +16,19 @@
     "# check versions of the libraries\n",
     "# they should not be too much behind the ones in the comments...\n",
     "import numpy\n",
-    "print(\"numpy\", numpy.__version__)        # >= 1.18.5\n",
+    "print(\"numpy\", numpy.__version__)        # >= 1.22.3\n",
     "import pandas\n",
-    "print(\"pandas\", pandas.__version__)      # >= 1.2.1\n",
+    "print(\"pandas\", pandas.__version__)      # >= 1.4.2\n",
     "import scipy\n",
-    "print(\"scipy\", scipy.__version__)        # >= 1.4.1\n",
+    "print(\"scipy\", scipy.__version__)        # >= 1.8.0\n",
     "import sklearn\n",
-    "print(\"sklearn\", sklearn.__version__)    # >= 0.24.1\n",
+    "print(\"sklearn\", sklearn.__version__)    # >= 1.1.2\n",
     "import matplotlib\n",
-    "print(\"matplotlib\", matplotlib.__version__)  # >= 3.3.1\n",
+    "print(\"matplotlib\", matplotlib.__version__)  # >= 3.5.1\n",
     "import PIL\n",
-    "print(\"pillow\", PIL.__version__)         # >= 8.1.0\n",
+    "print(\"pillow\", PIL.__version__)         # >= 9.1.0\n",
     "import plotly\n",
-    "print(\"plotly\", plotly.__version__)      # >= 4.9.0\n",
+    "print(\"plotly\", plotly.__version__)      # >= 5.7.0\n",
     "print(\"Congratulations! Your installation of the basic libraries was successful!\")\n",
     "# the following libraries are needed for the neural network example \n",
     "# (if you're working with the recommended pytorch, not keras/tensorflow)\n",
@@ -38,11 +38,11 @@
     "# (if you're working on a normal laptop and you don't know what GPU means,\n",
     "# don't worry about it and just execute `$ pip install torch torchvision skorch`)\n",
     "import torch\n",
-    "print(\"torch\", torch.__version__)        # >= 1.6.0\n",
+    "print(\"torch\", torch.__version__)        # >= 1.12.1\n",
     "import torchvision\n",
-    "print(\"torchvision\", torchvision.__version__)  # >= 0.8.1\n",
+    "print(\"torchvision\", torchvision.__version__)  # >= 0.13.1\n",
     "import skorch\n",
-    "print(\"skorch\", skorch.__version__)      # >= 0.9.0\n",
+    "print(\"skorch\", skorch.__version__)      # >= 0.11.0\n",
     "print(\"Congratulations! Your installation of the neural network libraries was successful!\")"
    ]
   },
@@ -56,7 +56,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -70,7 +70,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.2"
   }
  },
  "nbformat": 4,
