--- a/test_installation.ipynb
+++ b/test_installation.ipynb
@@ -29,6 +29,8 @@
     "print(\"pillow\", PIL.__version__)         # >= 9.1.0\n",
     "import plotly\n",
     "print(\"plotly\", plotly.__version__)      # >= 5.7.0\n",
+    "import xlrd\n",
+    "print(\"xlrd\", xlrd.__version__)      # >= 2.0.1\n",
     "print(\"Congratulations! Your installation of the basic libraries was successful!\")\n",
     "# the following libraries are needed for the neural network example \n",
     "# (if you're working with the recommended pytorch, not keras/tensorflow)\n",
