--- a/notebooks/4_analyze_toydata.ipynb
+++ b/notebooks/4_analyze_toydata.ipynb
@@ -311,8 +311,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Questions:** \\\n",
-    "Have a look at the values for (balanced) accuracy and compare them to the scores obtained with the stupid baseline: Do you think we're on the right track, i.e., does this seem like a useful model?"
+    "**Questions:** \n",
+    "- Have a look at the values for (balanced) accuracy and compare them to the scores obtained with the stupid baseline: Do you think we're on the right track, i.e., does this seem like a useful model?"
    ]
   },
   {
@@ -331,8 +331,8 @@
    "source": [
     "The decision tree has its root at the top (where you start) and the leaves (i.e., those nodes that don't branch off anymore) at the bottom (where you stop and make the final prediction). Each node in the tree shows in the first line the variable based on which the next split is made incl. the threshold value (except for leaf nodes), then the current Gini impurity (i.e., how homogeneous the labels of all the samples that ended up in this node are; this is what the decision tree internally optimizes, i.e., notice how the value gets smaller on at least one side after a split), then the fraction of samples that ended up in this node, and the distribution of samples into the different classes, as well as the class that would be predicted for a sample at this point.\n",
     "\n",
-    "**Questions:** \\\n",
-    "Have a look at the tree and the decisions that are made in it: What has the decision tree actually learned, i.e., which samples does it classify as faulty and which as ok? Does this model help us on our quest to identify production conditions that result in faulty products?"
+    "**Questions:** \n",
+    "- Have a look at the tree and the decisions that are made in it: What has the decision tree actually learned, i.e., which samples does it classify as faulty and which as ok? Does this model help us on our quest to identify production conditions that result in faulty products?"
    ]
   },
   {
@@ -391,8 +391,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Questions:** \\\n",
-    "What do you think of the model now?"
+    "**Questions:** \n",
+    "- What do you think of the model now?"
    ]
   },
   {
@@ -414,8 +414,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Questions:** \\\n",
-    "Is this a better model? If anything, is the model over- or underfitting?"
+    "**Questions:** \n",
+    "- Is this a better model? If anything, is the model over- or underfitting?"
    ]
   },
   {
@@ -509,8 +509,8 @@
    "source": [
     "By clicking and dragging on the different axis, select the data such that you remove the outliers (i.e., keep only samples with height/width > 0) and then select the faulty products (i.e., with faulty = 1).\n",
     "\n",
-    "**Questions:** \\\n",
-    "Do you notice any patterns? How would you explain to the stakeholders why some of their products are faulty?\n",
+    "**Questions:** \n",
+    "- Do you notice any patterns? How would you explain to the stakeholders why some of their products are faulty?\n",
     "\n",
     "(In this case, we can derive the relevant insights already from the plot. However, in real problems, the solution is usually not this obvious, so lets try to see how we could also solve this with ML.)\n",
     "\n",
@@ -573,8 +573,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Questions:** \\\n",
-    "What do you think of the model now? If anything, is the model over- or underfitting?"
+    "**Questions:** \n",
+    "- What do you think of the model now? If anything, is the model over- or underfitting?"
    ]
   },
   {
