--- a/notebooks/2_image_quantization.ipynb
+++ b/notebooks/2_image_quantization.ipynb
@@ -54,7 +54,7 @@
    "source": [
     "# reshape image into a matrix with RGB values for each pixel\n",
     "h, w, d = img_array.shape\n",
-    "X = new_X.reshape(h*w, d)\n",
+    "X = img_array.reshape(h*w, d)\n",
     "# 1 pixel = 1 data point; RGB values = features\n",
     "print(X.shape)"
    ]
