update sklearn version and case study with backend

--- a/notebooks/1_visualize_text.ipynb
+++ b/notebooks/1_visualize_text.ipynb
@@ -26,10 +26,7 @@
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.decomposition import KernelPCA\n",
     "from sklearn.manifold import TSNE\n",
-    "import plotly.express as px\n",
-    "# suppress unnecessary warnings\n",
-    "import warnings\n",
-    "warnings.simplefilter(action='ignore', category=FutureWarning)"
+    "import plotly.express as px"
    ]
   },
   {
