--- a/notebooks/3_supervised_comparison.ipynb
+++ b/notebooks/3_supervised_comparison.ipynb
@@ -25,8 +25,8 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.inspection import DecisionBoundaryDisplay\n",
     "# don't get unneccessary warnings\n",
-    "import warnings\n",
-    "warnings.simplefilter(action='ignore', category=FutureWarning)"
+    "# import warnings\n",
+    "# warnings.simplefilter(action='ignore', category=FutureWarning)"
    ]
   },
   {
