--- a/test_installation.ipynb
+++ b/test_installation.ipynb
@@ -22,7 +22,7 @@
     "import scipy\n",
     "print(\"scipy\", scipy.__version__)        # >= 1.8.0\n",
     "import sklearn\n",
-    "print(\"sklearn\", sklearn.__version__)    # >= 1.1.2\n",
+    "print(\"sklearn\", sklearn.__version__)    # >= 1.2.0\n",
     "import matplotlib\n",
     "print(\"matplotlib\", matplotlib.__version__)  # >= 3.5.1\n",
     "import PIL\n",
@@ -30,7 +30,11 @@
     "import plotly\n",
     "print(\"plotly\", plotly.__version__)      # >= 5.7.0\n",
     "import xlrd\n",
-    "print(\"xlrd\", xlrd.__version__)      # >= 2.0.1\n",
+    "print(\"xlrd\", xlrd.__version__)          # >= 2.0.1\n",
+    "import requests\n",
+    "print(\"requests\", requests.__version__)  # >= 2.27.1\n",
+    "import fastapi\n",
+    "print(\"fastapi\", fastapi.__version__)    # >= 0.89.0\n",
     "print(\"Congratulations! Your installation of the basic libraries was successful!\")\n",
     "# the following libraries are needed for the neural network example \n",
     "# (if you're working with the recommended pytorch, not keras/tensorflow)\n",
